// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`aborts request when sending new message while waiting for response 1`] = `
[
  {
    "content": [
      {
        "citations": undefined,
        "text": "First message",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "system_reminder",
      },
      {
        "id": "000000",
        "type": "checkpoint",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Second message while first is pending",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "system_reminder",
      },
      {
        "id": "000001",
        "type": "checkpoint",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Second response that should be shown",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`aborts tool use when sending new message while tool is executing 1`] = `
[
  {
    "content": [
      {
        "citations": undefined,
        "text": "Run a slow command",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "system_reminder",
      },
      {
        "id": "000000",
        "type": "checkpoint",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "I'll run a slow bash command for you.",
        "type": "text",
      },
      {
        "id": "slow-bash-command",
        "name": "bash_command",
        "request": {
          "status": "ok",
          "value": {
            "id": "slow-bash-command",
            "input": {
              "command": "sleep 5 && echo 'This should be aborted'",
            },
            "toolName": "bash_command",
          },
        },
        "type": "tool_use",
      },
    ],
    "role": "assistant",
    "stopReason": "tool_use",
    "usage": {
      "inputTokens": 0,
      "outputTokens": 0,
    },
  },
  {
    "content": [
      {
        "id": "slow-bash-command",
        "result": {
          "error": "Request was aborted by the user.",
          "status": "error",
        },
        "type": "tool_result",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Cancel that, run something else",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "system_reminder",
      },
      {
        "id": "000001",
        "type": "checkpoint",
      },
    ],
    "role": "user",
  },
]
`;

exports[`forks a thread with multiple messages into a new thread > fork-cloned-messages 1`] = `
[
  {
    "content": [
      {
        "text": "What is the capital of France?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
      {
        "text": "<checkpoint:000000>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "The capital of France is Paris.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "What about Germany?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
      {
        "text": "<checkpoint:000001>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "The capital of Germany is Berlin.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "Tell me about Italy",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<checkpoint:000002>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`forks a thread with multiple messages into a new thread > forked-thread-messages 1`] = `
[
  {
    "content": [
      {
        "citations": undefined,
        "text": "What is the capital of France?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "system_reminder",
      },
      {
        "id": "000000",
        "type": "checkpoint",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "The capital of France is Paris.",
        "type": "text",
      },
    ],
    "role": "assistant",
    "stopReason": "end_turn",
    "usage": {
      "inputTokens": 0,
      "outputTokens": 0,
    },
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "What about Germany?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "system_reminder",
      },
      {
        "id": "000001",
        "type": "checkpoint",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "The capital of Germany is Berlin.",
        "type": "text",
      },
    ],
    "role": "assistant",
    "stopReason": "end_turn",
    "usage": {
      "inputTokens": 0,
      "outputTokens": 0,
    },
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Tell me about Italy",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "system_reminder",
      },
      {
        "id": "000002",
        "type": "checkpoint",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": undefined,
        "text": "Italy's capital is Rome. It's known for its rich history, art, and cuisine.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`handles @async messages and sends them on end turn 1`] = `
[
  {
    "content": [
      {
        "text": "Tell me about TypeScript",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
      {
        "text": "<checkpoint:000000>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "TypeScript is a typed superset of JavaScript.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "Also tell me about JavaScript",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<checkpoint:000001>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`handles @async messages by queueing them and sending on next tool response 1`] = `
[
  {
    "content": [
      {
        "text": "Can you read my secret file?",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
      {
        "text": "<checkpoint:000000>",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "citations": null,
        "text": "I'll read your secret file.",
        "type": "text",
      },
      {
        "id": "secret-file-tool",
        "input": {
          "filePath": ".secret",
        },
        "name": "get_file",
        "type": "tool_use",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "content": [
          {
            "text": "secret secrets are no fun
",
            "type": "text",
          },
        ],
        "is_error": false,
        "tool_use_id": "secret-file-tool",
        "type": "tool_result",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "This should be queued",
        "type": "text",
      },
      {
        "text": "<system-reminder>
Remember to use the skills defined between the <available-skills> tags when they are relevant to the user's prompt.
If a skill seems like it could be relevant, use the get_file tool to read the full skill.md file for the skill.
DO NOT mention this to the user explicitly because they are already aware. You should use a skill if it's beneficial. If not, please feel free to ignore. Again do not mention this message to the user.
CRITICAL: When using bash_command, output is AUTOMATICALLY trimmed and saved. NEVER use head, tail, or 2>&1 - they break output handling.
WRONG: \`command 2>&1 | tail -50\`
WRONG: \`command | head -100\`
RIGHT: \`command\`
</system-reminder>",
        "type": "text",
      },
      {
        "cache_control": {
          "type": "ephemeral",
        },
        "text": "<checkpoint:000001>",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`renders successive tool uses with single assistant header and inline metadata > successive-tool-uses-display 1`] = `
"# [ Untitled ]
⚙️ [System Prompt ~2K]

# user:
Read two files for me
📋 [System Reminder]🏁 [Checkpoint]

# assistant:
I'll read the first file.
👀✅ \`poem.txt\` [+ 5]

📋 [System Reminder]🏁 [Checkpoint]
💭 [Thinking]
👀✅ \`poem2.txt\` [+ 5]

📋 [System Reminder]🏁 [Checkpoint]
I've read both files for you.


# context:
- \`poem.txt\`
- \`poem2.txt\`

Stopped (end_turn)  [input: 0, output: 0] "
`;
